Bug:  919441,922656 Reviewer:  Self Comments:  Fixed dialog status activity overlap.
Files:
M    gwt/src/org/kablink/teaming/gwt/client/widgets/ChangePasswordDlg.java
M    gwt/src/org/kablink/teaming/gwt/client/widgets/DlgBox.java
M    gwt/src/org/kablink/teaming/gwt/client/widgets/ForgottenPwdDlg.java
M    gwt/src/org/kablink/teaming/gwt/public/GwtTeaming.css

--- a/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtTeaming.css
+++ b/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtTeaming.css
@@ -1400,6 +1400,14 @@ body, table td, select
 	z-index: 1901;
 }
 
+.dlgBox_statusPanel_relative
+{
+	left: inherit !important;
+	position: inherit !important;
+	top: inherit !important;
+	z-index: inherit !important;
+}
+
 .dlgBox_statusMsg
 {
 	color: #505354;
